<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Clock &amp; Weather</string>
    <string name="add_city">Add City</string>
    <string name="world_clock_settings">World Clock Settings</string>
    <string name="no_clock_defined">Use the menu to add cities.</string>
    <string name="n_selcted_format">{0} selected</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="display_in_widget">Display in widget</string>
    <string name="description">Description</string>
    <string name="refresh">Refresh</string>

    <string-array name="speed_units">
        <item name="kmh">km/h</item>
        <item name="mph">mph</item>
        <item name="ms">m/s</item>
    </string-array>
    <string-array name="temp_units">
        <item name="celsius">°C</item>
        <item name="fahrenheit">°F</item>
    </string-array>

    <string name="preferences">Preferences</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="wind_speed_unit">Wind speed unit</string>
    <string name="humidity">Humidity</string>
    <string name="wind_format">Wind: {0} at {1}</string>
    <string name="wind_format_no_direction">Wind: {1}</string>
    <string name="weather">Weather</string>
    <string name="activity_title">World Clock</string>
    <string name="clock_widget_name">World Clock</string>
    <string name="weather_widget_name">World Clock &amp; Weather</string>
    <string name="no_data_available">No data available</string>
    <string name="change_temperature_unit">Change temperature unit</string>
    <string name="change_wind_speed_unit">Change wind speed unit</string>
    <string name="weather_source">Weather data source</string>

    <string-array name="weather_sources">
        <item name="owm">Open Weather Map</item>
        <item name="yahoo">Yahoo Weather</item>
        <item name="msn">MSN Weather</item>
    </string-array>

    <string name="change_source_of_weather_data">Change source of weather data</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="widget">Widget</string>
    <string name="use_custom_colors">Use custom colors</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="change_background_color">Change background color and transparency</string>
    <string name="change_foreground_color">Change foreground color</string>

    <string-array name="weather_purge_times">
        <item name="2hours">2 hours</item>
        <item name="4hours">4 hours</item>
        <item name="6hours">6 hours</item>
        <item name="12hours">12 hours</item>
        <item name="24hours">24 hours</item>
        <item name="never">Never</item>
    </string-array>

    <string name="weather_data_purge_time">Purge old data</string>
    <string name="weather_data_purge_time_dialog">Purge weather data older than</string>
    <string name="weather_data_purge_time_summary">When old weather data is removed</string>
    <string name="disable_automatic_update">No automatic update</string>
    <string name="disable_automatic_update_of_weather_conditions">Disable automatic update of weather conditions</string>
    <string name="weather_widget_name_2x1">World Clock &amp; Weather 2x1</string>
    <string name="weather_widget_name_2x2">World Clock &amp; Weather 2x2</string>
    <string name="weather_widget_name_2x3">World Clock &amp; Weather 2x3</string>
    <string name="weather_widget_name_2x4">World Clock &amp; Weather 2x4</string>
    <string name="weather_widget_name_4x1">World Clock &amp; Weather 4x1</string>
    <string name="weather_widget_name_4x2">World Clock &amp; Weather 4x2</string>
    <string name="weather_widget_name_4x3">World Clock &amp; Weather 4x3</string>
    <string name="weather_widget_name_4x4">World Clock &amp; Weather 4x4</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="general">General</string>
    <string name="automatically_sort_cities">Automatically sort cities</string>
    <string name="disable_to_sort_cities_manually">Disable to sort cities manually</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="time_zone">Time zone</string>
    <string name="feedback_title">Send Feedback</string>
    <string name="feedback_summary">Tell us what you think</string>
    <string name="about">About</string>
    <string name="version_caption">Version</string>
    <string name="license_caption">License</string>
    <string name="project_page_caption">Project page</string>
    <string name="developer_caption">Developed by</string>
    <string name="acknowledgements_caption">Acknowledgements</string>
    <string name="license_text">GPL Version 3 or later</string>
    <string name="project_page_text"><a href="https://github.com/arminha/worldclockwidget">github.com/arminha/worldclockwidget</a></string>
    <string name="developer_text">Armin Häberling\nSpecial thanks to <a href="https://vyick.wordpress.com/">vyick</a> for beta testing and her suggestions!</string>
    <string name="acknowledgement_weather">Weather data is provided by <a href="http://openweathermap.org/">Open Weather Map</a>,<a href="https://weather.yahoo.com/">Yahoo Weather</a> or <a href="http://local.msn.com/">MSN Weather</a>.</string>
    <string name="acknowledgement_icons">Weather icons are based on <a href="http://www.alessioatzeni.com/meteocons/">Meteocons</a> from Alessio Atzeni.</string>
    <string name="acknowledgement_geonames">Time zone and geographical data is provided by <a href="http://www.geonames.org/">GeoNames</a>.</string>

</resources>