<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3sp"
                android:text="@string/version_caption" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            style="@style/aboutCaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_caption" />

        <TextView
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_text" />

        <TextView
            style="@style/aboutCaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_page_caption" />

        <TextView
            android:id="@+id/project_page_text"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_page_text" />

        <TextView
            style="@style/aboutCaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_caption" />

        <TextView
            android:id="@+id/developer_text"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_text" />

        <TextView
            style="@style/aboutCaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/acknowledgements_caption" />

        <TextView
            android:id="@+id/acknowledgement_weather_text"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acknowledgement_weather" />

        <TextView
            android:id="@+id/acknowledgement_icons_text"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:text="@string/acknowledgement_icons" />

        <TextView
            android:id="@+id/acknowledgement_geonames_text"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:text="@string/acknowledgement_geonames" />
    </LinearLayout>

</ScrollView>